completing answers